minor tweaks to contact form

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -166,7 +166,7 @@
               <option value="Canada">Canada</option>
               <option value="United States">United States</option>
             </optgroup>
-            <optgroup label="Full List">
+            <optgroup label="---------------------------------">
               <option value="Afghanistan">Afghanistan</option>
               <option value="Åland Islands">Åland Islands</option>
               <option value="Albania">Albania</option>
@@ -501,7 +501,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="../index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
+          <a href="index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
