--- a/pages/products-minipod.html
+++ b/pages/products-minipod.html
@@ -599,7 +599,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
+          <a href="../index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -623,13 +623,11 @@
       <div class="footer__divider"></div>
       <div class="flex flex-col-mobile jc-sb gap--sm">
         <div class="flex flex-col-mobile gap--sm">
-          <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
+          <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
-              src="../images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
-          <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
-              src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
+          <img class="footer__social" src="../images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
         </div>
       </div>
     </div>
