--- a/index.html
+++ b/index.html
@@ -730,14 +730,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="pages/products-minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="pages/products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="pages/contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
