--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
             </svg>
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-            <a class="dropdown__menu-item dropdown__link" href="pages/products-minipod.html" tabindex="-1"
-              aria-role="menu-item">
+            <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
@@ -110,7 +109,7 @@
           </div>
         </li>
         <li>
-          <a class="navbar__link" href="pages/contact.html">Contact Us</a>
+          <a class="navbar__link" href="contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -290,14 +289,14 @@
             Discover our continued innovation, competitive pricing, and what really sets us apart by exploring our
             offering. </p>
           <div class="flex gap--sm">
-            <a class="btn btn--primary" href="pages/products-minipod.html">Products
+            <a class="btn btn--primary" href="minipod.html">Products
               <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
               </svg>
             </a>
-            <a class="btn btn--tertiary" href="pages/contact.html">Contact Sales
+            <a class="btn btn--tertiary" href="contact.html">Contact Sales
               <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
@@ -331,7 +330,7 @@
           <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
-        <a href="pages/products-minipod.html" class="btn btn--primary btn--as-c">Minipod Info
+        <a href="minipod.html" class="btn btn--primary btn--as-c">Minipod Info
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -359,8 +358,8 @@
                 Unit (SPDU)
               </span> that comes along with it. The SPDU and its user interface give you the power to control numerous
               pricing to customize your Minipod and miners.</p>
-            <a href="pages/products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron"
-                width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
+                height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
               </svg></a>
@@ -385,8 +384,8 @@
                 data</span> for you to monitor every event that
               occurs. Determine the time period you want to analyze and never miss anything.
             </p>
-            <a href="pages/products-minipod.html" class="btn btn--primary">Products <svg class="btn__chevron" width="13"
-                height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="minipod.html" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
+                viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
               </svg>
@@ -410,8 +409,8 @@
               that occurs with your Minipod and your miners. <span class="text--emphasis text--light-blue">Receive
                 simple and clear emails</span> when such events happen.
             </p>
-            <a href="pages/products-minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron"
-                width="13" height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
+                height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
               </svg>
@@ -703,8 +702,8 @@
           </p>
           <h2 class="income__heading">PLUG & PLAY<br><span class="income__passive">PASSIVE INCOME</span></h2>
         </div>
-        <a href="pages/products-minipod.html" onmousedown="plugInMobile()" onmouseenter="plugIn()"
-          onmouseleave="plugOut()" class="income__btn btn btn--primary">Get Started
+        <a href="minipod.html" onmousedown="plugInMobile()" onmouseenter="plugIn()" onmouseleave="plugOut()"
+          class="income__btn btn btn--primary">Get Started
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" />
@@ -720,7 +719,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="../index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
+          <a href="index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -730,14 +729,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="pages/products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="pages/products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="pages/contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -747,8 +746,8 @@
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="../images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
         </div>
       </div>
     </div>
