--- a/minipod.html
+++ b/minipod.html
@@ -88,8 +88,7 @@
             </svg>
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-            <a class="dropdown__menu-item dropdown__link" href="products-minipod.html" tabindex="-1"
-              aria-role="menu-item">
+            <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="../images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
@@ -594,7 +593,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="../index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
+          <a href="index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -604,13 +603,13 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="products-minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
             <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
@@ -621,8 +620,8 @@
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="../images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
         </div>
       </div>
     </div>
