--- a/pages/archived/merch.html
+++ b/pages/archived/merch.html
@@ -71,7 +71,7 @@
           </span>
           <ul class="dropdown__menu">
             <li>
-              <a class="dropdown__link" href="pages/products-minipod.html">
+              <a class="dropdown__link" href="minipod.html">
                 <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Minipod Container
@@ -89,7 +89,7 @@
             </li>
           </ul>
         </li>
-        <li><a class="navbar__link" href="pages/contact.html">Contact Us</a></li>
+        <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -289,14 +289,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="pages/products-minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="pages/products-minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="pages/contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
