--- a/thanks.html
+++ b/thanks.html
@@ -138,7 +138,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+          <a href="../index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -165,8 +165,8 @@
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <img class="footer__social" src="../images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
         </div>
       </div>
     </div>
