fixed path issue with images

--- a/minipod.html
+++ b/minipod.html
@@ -89,7 +89,7 @@
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
             <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
-              <img class="icon--md" src="../images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
+              <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
                   <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -340,7 +340,7 @@
     <section id="specifications" class="card-grid">
       <div class="card-1 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="../images/icons/icon_power.svg" alt="Power Input Icon">
+          <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
           <h6>Power Input</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -353,7 +353,7 @@
       </div>
       <div class="card-2 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="../images/icons/icon_spdu.svg" alt="Smart Power Distribution Icon">
+          <img class="icon--md" src="images/icons/icon_spdu.svg" alt="Smart Power Distribution Icon">
           <h6>Smart Power Distribution Unit (SPDU)</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -368,7 +368,7 @@
       </div>
       <div class="card-3 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="../images/icons/icon_fan.svg" alt="Air Intake System Icon">
+          <img class="icon--md" src="images/icons/icon_fan.svg" alt="Air Intake System Icon">
           <h6>Air Intake System</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -381,7 +381,7 @@
       </div>
       <div class="card-4 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="../images/icons/icon_cooling.svg" alt="Cooling System Icon">
+          <img class="icon--md" src="images/icons/icon_cooling.svg" alt="Cooling System Icon">
           <h6>Cooling System</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -392,7 +392,7 @@
       </div>
       <div class="card-5 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="../images/icons/icon_mining.svg" alt="Mining Capacity Icon">
+          <img class="icon--md" src="images/icons/icon_mining.svg" alt="Mining Capacity Icon">
           <h6>Mining Capacity</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -403,7 +403,7 @@
       </div>
       <div class="card-6 flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="../images/icons/icon_security.svg" alt="Enhanced Security Icon">
+          <img class="icon--md" src="images/icons/icon_security.svg" alt="Enhanced Security Icon">
           <h6>Enhanced Security</h6>
         </div>
         <ul class="card__list flex flex-col gap--md">
@@ -413,7 +413,7 @@
         </ul>
       </div>
       <div class="card-7 card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+        <img class="icon--md" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
         <h6>Total Capacity</h6>
         <h6 class="text--blue">300kW</h6>
       </div>
@@ -427,7 +427,7 @@
         </svg>
       </a>
       <div class="card-9 card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
         <h6>Approx. Cost</h6>
         <h6 class="text--blue">$39,999 - $45,500</h6>
       </div>
@@ -443,8 +443,8 @@
           4X ventilation fan, ATMS and awning-based intake system.
         </p>
         <div class="minipod__illustrations">
-          <img src="../images/illustrations/minipod-front_with-text.svg" alt="Minipod Illustration Front Side">
-          <img src="../images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
+          <img src="images/illustrations/minipod-front_with-text.svg" alt="Minipod Illustration Front Side">
+          <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
       </div>
@@ -461,22 +461,22 @@
 
         <div class="flex flex-col gap--xlg mtop--xxl">
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="../images/illustrations/minipod-1unit.svg"
+            <img class="minipod__set-img" src="images/illustrations/minipod-1unit.svg"
               alt="Minipod Single Unit Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>Single Unit</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">300kW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">4 Set or higher</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$39,999 - $45,500</h6>
               </div>
@@ -484,22 +484,22 @@
           </div>
 
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="../images/illustrations/minipod-3set.svg"
+            <img class="minipod__set-img" src="images/illustrations/minipod-3set.svg"
               alt="Minipod 3 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>3 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">900kW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">4 Set or higher</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$113,997 - $130,500</h6>
               </div>
@@ -507,22 +507,22 @@
           </div>
 
           <div class="minipod__set gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="../images/illustrations/minipod-4set.svg"
+            <img class="minipod__set-img" src="images/illustrations/minipod-4set.svg"
               alt="Minipod 4 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>4 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">1.2MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$167,500 - 190,899</h6>
               </div>
@@ -530,22 +530,22 @@
           </div>
 
           <div class="minipod__set minipod__set-6 gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="../images/illustrations/minipod-6set.svg"
+            <img class="minipod__set-img" src="images/illustrations/minipod-6set.svg"
               alt="Minipod 6 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>6 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">1.8MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$250,500 - 291,999</h6>
               </div>
@@ -553,22 +553,22 @@
           </div>
 
           <div class="minipod__set minipod__set-8 gap--lg ai-end jc-c">
-            <img class="minipod__set-img" src="../images/illustrations/minipod-8set.svg"
+            <img class="minipod__set-img" src="images/illustrations/minipod-8set.svg"
               alt="Minipod 8 Unit Set Illustration">
             <div class="minipod__set-text flex flex-col gap--sm ai-c">
               <h4>8 Unit Set</h4>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
+                <img class="icon--sm" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
                 <h6 class="minipod__set-heading">Total Capacity</h6>
                 <h6 class="text--blue">2.4MW</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
+                <img class="icon--sm" src="images/icons/icon_switch-gear.svg" alt="Switch Gear Icon">
                 <h6 class="minipod__set-heading">Switch Gear</h6>
                 <h6 class="text--blue">Included</h6>
               </div>
               <div class="card-9 minipod__set-detail flex ai-c gap--md">
-                <img class="icon--sm" src="../images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+                <img class="icon--sm" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
                 <h6 class="minipod__set-heading">Approx. Cost</h6>
                 <h6 class="text--blue">$310,500 - 356,999</h6>
               </div>
