--- a/thanks.html
+++ b/thanks.html
@@ -89,7 +89,7 @@
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
             <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
-              <img class="icon--md" src="../images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
+              <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
                   <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -128,7 +128,7 @@
       </div>
 
       <div class="hero__img">
-        <img src="../images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
+        <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
       </div>
     </section>
 
@@ -138,7 +138,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="../index.html"><img class="footer__logo" src="../images/icons/icon_logo-white.svg"
+          <a href="../index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -165,8 +165,8 @@
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
-          <img class="footer__social" src="../images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
-          <img class="footer__social" src="../images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
+          <img class="footer__social" src="images/icons/icon_facebook.svg" alt="Facebook Logo Icon">
+          <img class="footer__social" src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon">
         </div>
       </div>
     </div>
