--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../dist/style.min.css?v=1.0.19">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="/../images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +45,7 @@
 
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="../index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
+      <a href="index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
         <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
           <g>
             <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -88,7 +88,7 @@
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
             <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
-              <img class="icon--md" src="../images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
+              <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
                   <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -124,7 +124,7 @@
         </div>
       </div>
       <div class="hero__img">
-        <img src="../images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
+        <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
       </div>
     </section>
 
