--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -89,7 +89,7 @@
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
             <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
-              <img class="icon--md" src="../images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
+              <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
                   <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
@@ -128,7 +128,7 @@
       </div>
 
       <div class="hero__img">
-        <img src="../images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
+        <img src="images/illustrations/contact-chat-bubbles.svg" alt="Chat Bubble Icons">
       </div>
     </section>
 
