--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
+      <a href="index" class="navbar__logo" aria-label="Digital Shovel Logo">
         <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
           <g>
             <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -65,7 +65,7 @@
       <ul class="navbar__links" data-visible="false">
         <li class="navbar__overlay"></li>
         <li>
-          <a href="../index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
+          <a href="../index" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
             <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
               <g>
                 <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -87,7 +87,7 @@
             </svg>
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-            <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
+            <a class="dropdown__menu-item dropdown__link" href="minipod" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
@@ -105,7 +105,7 @@
           </div>
         </li>
         <li>
-          <a class="navbar__link" href="contact.html">Contact Us</a>
+          <a class="navbar__link" href="contact">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -484,7 +484,7 @@
           <textarea class="fieldset__text" aria-label="Enter a message" type="text" id="input-message" name="Message"
             placeholder="Tell us more about your project, business needs, and budget." required="required"></textarea>
         </div>
-        <input type="hidden" name="_next" value="https://digitalshovel.com/thanks.html">
+        <input type="hidden" name="_next" value="https://digitalshovel.com/thanks">
         <input aria-label="Submit Button" class="btn btn--primary btn--form" type="submit">
       </form>
     </section>
@@ -494,7 +494,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="index.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+          <a href="index"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -504,14 +504,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="minipod" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="minipod" class="footer__list-item">Products</a></li>
+            <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
