--- a/pages/archived/faq.html
+++ b/pages/archived/faq.html
@@ -35,7 +35,7 @@
   <header class="header">
 
     <nav class="navbar">
-      <a href="../index.html" class="navbar__logo" aria-label="Digital Shovel Logo">
+      <a href="../index" class="navbar__logo" aria-label="Digital Shovel Logo">
         <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
           <g>
             <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -50,7 +50,7 @@
 
       <ul class="navbar__links" data-visible="false">
         <li class="navbar__overlay"></li>
-        <li><a href="../index.html" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
+        <li><a href="../index" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
             <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
               <g>
                 <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -71,7 +71,7 @@
           </span>
           <ul class="dropdown__menu">
             <li>
-              <a class="dropdown__link" href="minipod.html">
+              <a class="dropdown__link" href="minipod">
                 <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Minipod Container
@@ -89,7 +89,7 @@
             </li>
           </ul>
         </li>
-        <li><a class="navbar__link" href="contact.html">Contact Us</a></li>
+        <li><a class="navbar__link" href="contact">Contact Us</a></li>
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -101,7 +101,7 @@
         </li>
       </ul>
 
-      <button class="navbar__hamburger" aria-controls="navbar__links" aria-expanded="false" href="home.html">
+      <button class="navbar__hamburger" aria-controls="navbar__links" aria-expanded="false" href="home">
         <span class="sr-only">Menu</span>
         <div class="line line-1"></div>
         <div class="line line-2"></div>
@@ -228,7 +228,7 @@
         </article>
         <div class="faq__content-cta flex flex-col gap--md">
           <h3>Have more questions?</h3>
-          <a href="contact.html" class="btn btn--primary">Contact Us
+          <a href="contact" class="btn btn--primary">Contact Us
             <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -247,7 +247,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="home.html"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
+          <a href="home"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
@@ -257,14 +257,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
+            <li><a href="minipod" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
-            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
+            <li><a href="minipod" class="footer__list-item">Products</a></li>
+            <li><a href="contact" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
