--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.min.css?v=1.0.20">
+  <link rel="stylesheet" href="dist/style.min.css?v=1.0.21">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -49,7 +49,7 @@
 
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="index" class="navbar__logo" aria-label="Digital Shovel Logo">
+      <a href="/" class="navbar__logo" aria-label="Digital Shovel Logo">
         <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
           <g>
             <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -69,7 +69,7 @@
       <ul class="navbar__links" data-visible="false">
         <li class="navbar__overlay"></li>
         <li>
-          <a href="index" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
+          <a href="/" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
             <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
               <g>
                 <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -91,7 +91,7 @@
             </svg>
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-            <a class="dropdown__menu-item dropdown__link" href="minipod" tabindex="-1" aria-role="menu-item">
+            <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
@@ -109,7 +109,7 @@
           </div>
         </li>
         <li>
-          <a class="navbar__link" href="contact">Contact Us</a>
+          <a class="navbar__link" href="contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -289,14 +289,14 @@
             Discover our continued innovation, competitive pricing, and what really sets us apart by exploring our
             offering. </p>
           <div class="flex gap--sm">
-            <a class="btn btn--primary" href="minipod">Products
+            <a class="btn btn--primary" href="minipod.html">Products
               <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
               </svg>
             </a>
-            <a class="btn btn--tertiary" href="contact">Contact Sales
+            <a class="btn btn--tertiary" href="contact.html">Contact Sales
               <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
@@ -330,7 +330,7 @@
           <img src="images/illustrations/minipod-back_with-text.svg" alt="Minipod Illustration Back Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
-        <a href="minipod" class="btn btn--primary btn--as-c">Minipod Info
+        <a href="minipod.html" class="btn btn--primary btn--as-c">Minipod Info
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -358,7 +358,7 @@
                 Unit (SPDU)
               </span> that comes along with it. The SPDU and its user interface give you the power to control numerous
               pricing to customize your Minipod and miners.</p>
-            <a href="minipod" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
+            <a href="minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
                 height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -384,7 +384,7 @@
                 data</span> for you to monitor every event that
               occurs. Determine the time period you want to analyze and never miss anything.
             </p>
-            <a href="minipod" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
+            <a href="minipod.html" class="btn btn--primary">Products <svg class="btn__chevron" width="13" height="12"
                 viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -409,7 +409,7 @@
               that occurs with your Minipod and your miners. <span class="text--emphasis text--light-blue">Receive
                 simple and clear emails</span> when such events happen.
             </p>
-            <a href="minipod" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
+            <a href="minipod.html" class="btn btn--primary btn--white">Products <svg class="btn__chevron" width="13"
                 height="12" viewBox="0 0 13 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.49 6L7.5 6" />
                 <path d="M2.5 1L7.95455 6L2.5 11" />
@@ -702,7 +702,7 @@
           </p>
           <h2 class="income__heading">PLUG & PLAY<br><span class="income__passive">PASSIVE INCOME</span></h2>
         </div>
-        <a href="minipod" onmousedown="plugInMobile()" onmouseenter="plugIn()" onmouseleave="plugOut()"
+        <a href="minipod.html" onmousedown="plugInMobile()" onmouseenter="plugIn()" onmouseleave="plugOut()"
           class="income__btn btn btn--primary">Get Started
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
@@ -719,8 +719,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="index"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
-              alt="Digital Shovel Logo" /></a>
+          <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
             cost, and high security, we help businesses with managed and unmanaged miner hosting.
@@ -729,14 +728,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="minipod" class="footer__list-item">Minipod</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="minipod" class="footer__list-item">Products</a></li>
-            <li><a href="contact" class="footer__list-item">Contact</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
