--- a/minipod.html
+++ b/minipod.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="../dist/style.min.css?v=1.0.20">
+  <link rel="stylesheet" href="../dist/style.min.css?v=1.0.21">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -46,7 +46,7 @@
 
   <nav class="navbar">
     <div class="navbar__container">
-      <a href="../index" class="navbar__logo" aria-label="Digital Shovel Logo">
+      <a href="/" class="navbar__logo" aria-label="Digital Shovel Logo">
         <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
           <g>
             <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -66,7 +66,7 @@
       <ul class="navbar__links" data-visible="false">
         <li class="navbar__overlay"></li>
         <li>
-          <a href="../index" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
+          <a href="/" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
             <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
               <g>
                 <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -88,7 +88,7 @@
             </svg>
           </button>
           <div class="dropdown__menu" aria-role="menu" aria-hidden="true">
-            <a class="dropdown__menu-item dropdown__link" href="minipod" tabindex="-1" aria-role="menu-item">
+            <a class="dropdown__menu-item dropdown__link" href="minipod.html" tabindex="-1" aria-role="menu-item">
               <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon" aria-hidden="true">
               <div class="dropdown__text">
                 <h5>Minipod Container
@@ -106,7 +106,7 @@
           </div>
         </li>
         <li>
-          <a class="navbar__link" href="contact">Contact Us</a>
+          <a class="navbar__link" href="contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -417,7 +417,7 @@
         <h6>Total Capacity</h6>
         <h6 class="text--blue">300kW</h6>
       </div>
-      <a href="contact" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
+      <a href="contact.html" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -575,7 +575,7 @@
             </div>
           </div>
         </div>
-        <a href="contact" class="btn btn--primary mtop--xxl mbot--lg">Contact Sales
+        <a href="contact.html" class="btn btn--primary mtop--xxl mbot--lg">Contact Sales
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -593,8 +593,7 @@
     <div class="container footer__container">
       <div class="flex flex-col-mobile jc-sb gap--xlg">
         <div class="footer__column">
-          <a href="index"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
-              alt="Digital Shovel Logo" /></a>
+          <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
             Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy
             cost, and high security, we help businesses with managed and unmanaged miner hosting.
@@ -603,14 +602,14 @@
         <div class="footer__column">
           <small class="footer__heading">Products</small>
           <ul class="footer__list">
-            <li><a href="minipod" class="footer__list-item">Minipod</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Minipod</a></li>
           </ul>
         </div>
         <div class="footer__column">
           <small class="footer__heading">Navigation</small>
           <ul class="footer__list">
-            <li><a href="minipod" class="footer__list-item">Products</a></li>
-            <li><a href="contact" class="footer__list-item">Contact</a></li>
+            <li><a href="minipod.html" class="footer__list-item">Products</a></li>
+            <li><a href="contact.html" class="footer__list-item">Contact</a></li>
           </ul>
         </div>
       </div>
