--- a/pages/archived/faq.html
+++ b/pages/archived/faq.html
@@ -35,7 +35,7 @@
   <header class="header">
 
     <nav class="navbar">
-      <a href="../index" class="navbar__logo" aria-label="Digital Shovel Logo">
+      <a href="/" class="navbar__logo" aria-label="Digital Shovel Logo">
         <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
           <g>
             <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
@@ -50,7 +50,7 @@
 
       <ul class="navbar__links" data-visible="false">
         <li class="navbar__overlay"></li>
-        <li><a href="../index" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
+        <li><a href="/" class="navbar__logo mobile" aria-label="Digital Shovel Logo">
             <svg title="Digital Shovel Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.45 80.96">
               <g>
                 <path fill="var(--blue-500)" d="M38.54.49H0v25.7h12.85V13.34h25.69v12.85h12.85V.49H38.54z" />
