fixed URL link to minipod page

--- a/pages/archived/faq.html
+++ b/pages/archived/faq.html
@@ -71,7 +71,7 @@
           </span>
           <ul class="dropdown__menu">
             <li>
-              <a class="dropdown__link" href="contact">
+              <a class="dropdown__link" href="minipod">
                 <img class="icon--md" src="images/icons/icon_minipod.svg" alt="Minipod Icon">
                 <div class="dropdown__text">
                   <h5>Minipod Container
