major update including voskcoin landing page

--- a/pages/archived/team.html
+++ b/pages/archived/team.html
@@ -635,7 +635,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col-mobile jc-sb gap--xlg">
+      <div class="flex flex-col-tablet jc-sb gap--xlg">
         <div class="footer__column">
           <a href="home"><img class="footer__logo" src="images/icons/icon_logo-white.svg"
               alt="Digital Shovel Logo" /></a>
@@ -659,8 +659,8 @@
         </div>
       </div>
       <div class="footer__divider"></div>
-      <div class="flex flex-col-mobile jc-sb gap--sm">
-        <div class="flex flex-col-mobile gap--sm">
+      <div class="flex flex-col-tablet jc-sb gap--sm">
+        <div class="flex flex-col-tablet gap--sm">
           <small class="footer__copyright">© 2022 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
