--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="dist/style.min.css?v=1.0.21">
+  <link rel="stylesheet" href="dist/style.min.css?v=1.1">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
@@ -717,7 +717,7 @@
 
   <footer class="footer">
     <div class="container footer__container">
-      <div class="flex flex-col-mobile jc-sb gap--xlg">
+      <div class="flex flex-col-tablet jc-sb gap--xlg">
         <div class="footer__column">
           <a href="/"><img class="footer__logo" src="images/icons/icon_logo-white.svg" alt="Digital Shovel Logo" /></a>
           <p class="footer__body">
@@ -740,8 +740,8 @@
         </div>
       </div>
       <div class="footer__divider"></div>
-      <div class="flex flex-col-mobile jc-sb gap--sm">
-        <div class="flex flex-col-mobile gap--sm">
+      <div class="flex flex-col-tablet jc-sb gap--sm">
+        <div class="flex flex-col-tablet gap--sm">
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
